[package]
name = "pinger"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
icmp-socket = "0.2.0"
thiserror = "1.0.40"
tokio = { version = "1.38.0", default-features = false, features = ["libc", "macros", "rt-multi-thread", "time"] }
